[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libsinstallation"  
version = "0.3.0"
description = "this is for library visulization"
authors = [{ name = "Raghav Singhal", email = "singhalraghav.59@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"  
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "seaborn",
    "setuptools"
]

[tool.setuptools]
packages = ["libs"]
